--- a/app.json
+++ b/app.json
@@ -75,7 +75,7 @@
       },
        "START_IMG": {
          "description": "Image shows when hit /start",
-         "value": "https://telegra.ph/file/511ad504656e712b88235.jpg"    
+         "value": "https://telegra.ph/file/2760adf198b8ee1450a6c.jpg"    
       },
       "API_OPENWEATHER": {
          "description": "Required for weather information",
@@ -146,7 +146,7 @@
       
    ],
    "name": "Mikasa",
-   "repository": "https://github.com/Sur-vivor/CiderellaProBot",
-   "success_url": "https://telegram.dog/CinderellaProBot",
+   "repository": "https://github.com/jerinjohny-ktnm/Mikasa",
+   "success_url": "https://telegram.dog/mikasaprobot",
    "logo": "https://telegra.ph/file/2760adf198b8ee1450a6c.jpg"
 }
